fixed spacing bug with tab selectors on about.html

--- a/css/index.css
+++ b/css/index.css
@@ -554,6 +554,7 @@ header .nav .nav-button {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  width: 80%;
 }
 .about-body .container .team-cards .card {
   width: 350px;
