--- a/less/about.less
+++ b/less/about.less
@@ -80,6 +80,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-evenly;
+      width: 80%;
       // .hidden {
       //   display: none;
       // }
